# AudioEffect_Modulation

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: Format.cmake
src/: CMakeLists.txt
src/Chorus/: CMakeLists.txt  Chorus.cpp
src/Chorus/include/: Chorus.h
src/CombFilter/: CMakeLists.txt  CombFilter.cpp
src/CombFilter/include/: CombFilter.h
src/Exec/: CMakeLists.txt  main.cpp
src/Exec/AudioFileIO/: CMakeLists.txt
src/Exec/AudioFileIO/include/: AudioFile.h
src/Exec/AudioFileIO/include/AudioFileIO/: AudioFileIf.h
src/Lfo/: CMakeLists.txt  Lfo.cpp
src/Lfo/include/: Lfo.h
src/Modulation/: APFilter.cpp  APFilter.h  CMakeLists.txt  ModulationBase.cpp  ModulationBase.h  ModulationIf.cpp
src/Modulation/include/: ModulationBase.h  ModulationIf.h
src/Modulation/lib_APFilter/: CMakeLists.txt
src/Modulation/lib_APFilter/include/: APFilter.h
src/ModulationConsoleApp/: CMakeLists.txt
src/ModulationConsoleApp/lib_AudioFileIO/: AudioFileIf.cpp  CMakeLists.txt
src/ModulationConsoleApp/lib_AudioFileIO/lib_sndlib/: CMakeLists.txt
src/ModulationPluginApp/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
src/Plugin/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp
src/Plugin/include/: PluginEditor.h  PluginProcessor.h
src/Wavetable/: CMakeLists.txt  Wavetable.cpp
src/Wavetable/include/: Wavetable.h
src/app_ChorusConsole/: CMakeLists.txt  main.cpp
src/app_ChorusConsole/lib_AudioFileIO/: AudioFile.cpp  CMakeLists.txt
src/app_ChorusPlugin/: CMakeLists.txt  MyLookAndFeel.cpp  PluginEditor.cpp  PluginProcessor.cpp
src/app_ChorusPlugin/include/: PluginEditor.h  PluginProcessor.h
src/app_ModulationConsole/: CMakeLists.txt  main.cpp
src/app_ModulationConsole/lib_AudioFileIO/lib_sndlib/: CMakeLists.txt
src/app_ModulationPlugin/: CMakeLists.txt  PluginProcessor.cpp
src/app_ModulationPlugin/include/: PluginEditor.h
src/lib_Chorus/: CMakeLists.txt  Chorus.cpp
src/lib_Chorus/include/: Chorus.h
src/lib_Chorus/lib_APFilter/: APFilter.cpp  CMakeLists.txt
src/lib_Chorus/lib_APFilter/test/: testAPFilter.cpp
src/lib_Chorus/test/: testChorus.cpp
src/lib_Lfo/: CMakeLists.txt
src/lib_Modulation/: CMakeLists.txt  ModulationBase.cpp  ModulationIf.cpp
src/lib_Modulation/include/: ModulationBase.h
src/lib_Modulation/include/Modulation/: ModulationIf.h
src/lib_Modulation/include/lib_Modulation/: ModulationIf.h
src/lib_Modulation/lib_APFilter/: APFilter.cpp  CMakeLists.txt
src/lib_Modulation/lib_APFilter/include/: APFilter.h
src/lib_Modulation/lib_APFilter/test/: testAPFilter.cpp
src/lib_Modulation/test/: testModulation.cpp
src/lib_Wavetable/: CMakeLists.txt
test/: CMakeLists.txt  DataFileIO.cpp  testChorus.cpp  testLfo.cpp  testModulation.cpp  testWavetable.cpp
test/include/: DataFileIO.h
